--- a/pag-portal/pag-conteudo/index.html
+++ b/pag-portal/pag-conteudo/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="top-nav">
         <a href="#home" class="active">MUNDOPOP</a>
-        <a href="/index.html">Esporte</a>
+        <a href="../index.html">Esporte</a>
         <a href="#about">BBB23</a>
         <a href="#contact">Cinema e TV</a>
     </div>
